--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:sass": "node-sass sass/main.scss css/style.css -rw",
     "devserver": "live-server --browser=firefox",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "start:wds": "webpack-dev-server",
+    "start:webpack": "webpack-dev-server",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
